# MinimaxComp_degrees

./: CMakeLists.txt  README.md  func.cpp  func.h  optimized_degrees.cpp  optimized_degrees.h  run_compare.cpp
text/: CC11.txt  CC13.txt  CC15.txt  CC17.txt  CC19.txt  CC21.txt  CC23.txt  CC25.txt  CC27.txt  CC29.txt  CC3.txt  CC31.txt  CC33.txt  CC35.txt  CC37.txt  CC39.txt  CC41.txt  CC43.txt  CC45.txt  CC47.txt  CC49.txt  CC5.txt  CC51.txt  CC53.txt  CC55.txt  CC57.txt  CC59.txt  CC61.txt  CC63.txt  CC7.txt  CC9.txt  E11.txt  E13.txt  E15.txt  E17.txt  E19.txt  E21.txt  E23.txt  E25.txt  E27.txt  (+22 more)
